static/css/global.css
/* TODO: Add responsiveness */
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
@import url("formatting.css");
@import url("components.css");

* {
    margin: 0;
    padding: 0;
}

body {
    background-color: #232323;
    font-family: 'Open Sans', sans-serif;
}

a {
    text-decoration: none;
    color: #b0b0b0;
}

a:hover {
    color: #cacaca;
}

.caption {
    background: rgba(0, 0, 0, 0.5);
    position: absolute;
    bottom: -37px;
    transform: translateY(-50%);
    padding: 10px 30px;
    text-align: center;
}

.prevent-select {
    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
    user-select: none; /* Standard syntax */
}

/* Navbar */

.navbar {
    position: relative;
    background-color: #232323;
    width: 100%;
    height: 80px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navbar .navbar-logo {
    width: 50px;
    height: 50px;
    margin-left: 50px;
}

.navbar .navbar-logo img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.navbar .navbar-links {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    margin-right: 50px;
    gap: 60px;
}

.navbar .navbar-links a {
    text-decoration: none;
    font-size: 16px;
    font-weight: 600;
}

/* Section */
.section {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
}

.section-container {
    padding-top: 36px;
    width: 95%;
    height: 100%;
    margin: auto;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.card-container {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    gap: 36px;
}

.section .section-title {
    padding: 24px;
}

.section .section-subtitle {
    width: 70%;
}

.section .section-content .section-container .section-image {
    max-width: 30%;
    height: auto;
    max-height: auto;
    margin: auto;
}

.section .section-content .section-container .section-image img {
    max-width: 100%;
    height: auto;
    object-fit: cover;
}

.section .section-content .section-container .section-text {
    max-width: 40%;
    margin-right: auto;
}

/* Footer */

.footer {
    position: relative;
    background-color: #232323;
    width: 100%;
    height: 300px;
}

.footer .footer-container {
    width: 80%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: auto;
    gap: 48px;
}

.footer .footer-container .footer-about {
    width: 250px;
    display: flex;
    flex-direction: column;
    gap: 36px;
}

.footer .footer-container .footer-about .footer-logo {
    width: 50px;
    height: 50px;
}

.footer .footer-container .footer-about .footer-logo img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.footer .footer-container .footer-about .footer-text {
    width: 100%;
    height: 100%;
}

.footer .footer-container .footer-links {
    width: 200px;
    height: 250px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.footer .footer-container .footer-links .footer-link {
    text-decoration: none;
}

.footer .footer-container .footer-socials {
    width: 200px;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 20px;
}

.footer .footer-container .footer-socials .socials {
    width: 100%;
    height: auto;
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
}

.footer .footer-container .footer-socials .socials a {
    min-width: 40px;
    min-height: 40px;
    max-width: 40px;
    max-height: 40px;
    border-radius: 50%;
    text-decoration: none;
    display: flex;
    align-items: center;
    justify-content: center;
}

.footer .footer-container .footer-socials .socials a img {
    width: 80%;
    height: 80%;
    object-fit: cover;
}

